Fixed misalignment issue in 'Wrapper' section

--- a/ide/static/css/zoo.css
+++ b/ide/static/css/zoo.css
@@ -2,7 +2,7 @@ body {
     overflow-x: hidden;
  }
 
-#wrapper {
+#content-wrapper {
     padding-left: 250px;
 }
 
